--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="js/script1.js"></script>
   </head>
 <body>
-  <h1>Lecture 52</h1>
+  <h1>Moduel 4 assignment</h1>
 </body>
 </html>
